<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100">

        <TextView
            android:id="@+id/createChallengeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createChallenge"
            android:textSize="10pt"
            android:textStyle="bold"
            app:fontFamily="sans-serif">

        </TextView>

        <!--Input Type for Challenge Specifications below-->
        <EditText
            android:id="@+id/challengeNameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/challengeName">

        </EditText>


        <EditText
            android:id="@+id/challengeDescriptionEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/challengeDescription">

        </EditText>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/difficultyTextView"
                android:layout_width="117dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/difficulty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <RatingBar
                android:id="@+id/difficultyRatingBar"
                android:layout_width="243dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Grey"
                android:clickable="true"
                android:numStars="5"
                android:progressTint="@color/Golden"
                android:stepSize="1.0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/startDateEditText"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:hint="@string/startDate">

            </EditText>

            <EditText
                android:id="@+id/endDateEditText"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:hint="@string/endDate">

            </EditText>

        </LinearLayout>

        <!--Drop-Down list for challenge type below-->
        <!--@param: ChallengeType1: Cardio type
                    ChallengeType2: Lifting type
                    ChallengeType3: Health type-->
        <TextView
            android:id="@+id/challengeTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/type"
            android:textSize="8pt"
            android:textStyle="bold">

        </TextView>

        <Spinner
            android:id="@+id/ChallengeTypeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/challengeTypeList"
            android:prompt="@string/createChallenge">

        </Spinner>

        <!--Drop-Down list for registration type below-->
        <!--@Param: RegistrationType1: Individual
                    RegistrationType2: Team-->
        <TextView
            android:id="@+id/registrationTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/registrationType"
            android:textSize="8pt"
            android:textStyle="bold">

        </TextView>

        <Spinner
            android:id="@+id/registrationTypeSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/registrationTypeList"
            android:prompt="@string/registrationType">

        </Spinner>

        <EditText
        android:id="@+id/minTeam"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/minTeam">

        </EditText>

        <EditText
            android:id="@+id/maxTeam"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maxTeam">

        </EditText>

        <!--Drop downs for range of completion per daily log-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/logRange"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:hint="@string/logType" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="/"
                android:textSize="35dp"/>

            <Spinner
                android:id="@+id/measurementTypeSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/measurementTypeList"
                android:prompt="@string/measurement">
            </Spinner>


        </LinearLayout>

        <RadioGroup
            android:id="@+id/competitionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.569"
            >

        <RadioButton
            android:id="@+id/competing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Competing" />

        <RadioButton
            android:id="@+id/noncompeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Non-competing" />
        </RadioGroup>


        <!--Button submission below-->
        <Button
            android:id="@+id/submitChallengeBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_design_yellow"
            android:text="@string/submitChallengeButton">

        </Button>



    </LinearLayout>
</ScrollView>