...
        app:layout_constraintEnd_toEndOf="@+id/coachChangePicTextView"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/coachChangePicTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coachUserNameTxtView"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:layout_alignBottom="@+id/statusTxtView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
...
